--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "yourvendor/pro_updater_git",
-    "description": "A Laravel package for auto-updating via Git.",
+    "name": "mdkaif/pro_updater_git",
+    "description": "A Laravel package for auto-updating applications directly from a Git repository.",
     "type": "laravel-package",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "YourVendor\\ProUpdaterGit\\": "src/"
+            "Mdkaif\\ProUpdaterGit\\": "src/"
         }
     },
     "authors": [
         {
             "name": "Md Kaif",
-            "email": "kaif.mth@gmail.com"
+            "email": "your_email@example.com"
         }
     ],
     "require": {
@@ -19,15 +19,17 @@
         "illuminate/support": "^10.0 || ^11.0",
         "illuminate/database": "^10.0 || ^11.0",
         "illuminate/console": "^10.0 || ^11.0",
-        "illuminate/routing": "^10.0 || ^11.0"
+        "illuminate/routing": "^10.0 || ^11.0",
+        "illuminate/filesystem": "^10.0 || ^11.0",
+        "illuminate/session": "^10.0 || ^11.0"
     },
     "extra": {
         "laravel": {
             "providers": [
-                "YourVendor\\ProUpdaterGit\\ProUpdaterGitServiceProvider"
+                "Mdkaif\\ProUpdaterGit\\ProUpdaterGitServiceProvider"
             ]
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
